<resources>
    <string name="app_name">Study Case</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_not_found">İsim Bilgisi Bulunamadı</string>
    <string name="cost_not_found">Fiyat Bilgisi Bulunamadı</string>
    <string name="search_hint">Aramak istediğiniz kelimeyi yazınız</string>
    <string name="film">Film</string>
    <string name="music">Müzik</string>
    <string name="ebook">E-kitap</string>
    <string name="podcast">Podcast</string>
    <string name="kind">Tarz</string>
    <string name="country">Ülke</string>
    <string name="genre">Tür</string>
    <string name="cost"> %1$s  %2$s</string>
</resources>